# esphomeapi

./: .release-please-config.json  .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: CI.yml  release-please.yml  release.yml
crates/esphomeapi/: Cargo.toml  build.rs
crates/esphomeapi-manager/: Cargo.toml
crates/esphomeapi-manager-node/: CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package.json
crates/esphomeapi-manager-node/scripts/: postbuild.js
crates/esphomeapi-manager-node/src/: discovery.rs  lib.rs  logger.rs  manager.rs
crates/esphomeapi-manager-node/src/entity/: light.rs  mod.rs  switch.rs
crates/esphomeapi-manager-node/src/model/: action_request.rs  color_mode.rs  device_info.rs  ha_event.rs  logs.rs  mod.rs
crates/esphomeapi-manager/src/: lib.rs
crates/esphomeapi-manager/src/entity/: light.rs  mod.rs  switch.rs
crates/esphomeapi/src/: client.rs  command_handle.rs  discovery.rs  lib.rs  utils.rs
crates/esphomeapi/src/connection/: mod.rs  router.rs
crates/esphomeapi/src/connection/codec/: mod.rs  noise.rs  plain.rs
crates/esphomeapi/src/model/: entity_info.rs  entity_state.rs  mod.rs  services.rs
crates/esphomeapi/src/protos/: api.proto  api_options.proto
examples/: .env.example  console-log.ts  custom-log.ts  package.json  subscribe.ts  tsconfig.json
