[package]
name = "esphomeapi-manager-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
esphomeapi-manager = { path = "../esphomeapi-manager" }
napi = { version = "3.3.0", features = ["tokio_rt", "napi9"] }
napi-derive = "3.2.5"
thiserror = "2.0.18"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["registry"] }

[build-dependencies]
napi-build = "2.2.3"
