[package]
name = "esphomeapi-manager-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
esphomeapi-manager = { path = "../esphomeapi-manager" }
napi = { version = "3.8.3", features = ["tokio_rt"] }
napi-derive = "3.5.2"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2.3.1"
