[package]
name = "esphomeapi"
version = "0.1.0"
edition = "2021"
description = "Rust client for ESPHome native API"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
bytes-varint = "1.1.0"
enumflags2 = "0.7.12"
futures = "0.3.32"
lazy_static = "1.5.0"
mdns-sd = "0.19.1"
noise-protocol = "0.2.1"
noise-rust-crypto = "0.6.2"
protobuf = "3.7.1"
thiserror = "2.0.18"
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing.workspace = true

[build-dependencies]
protobuf-codegen = "3.7.1"
